Event listener base

--- a/index.css
+++ b/index.css
@@ -32,6 +32,10 @@ body {
     background-color: brown;
 }
 
+.selected {
+    background: orange;
+}
+
 img {
     position: absolute;
     align-self: center;
