--- a/index.css
+++ b/index.css
@@ -32,8 +32,12 @@ body {
     background-color: brown;
 }
 
-.selected {
+.hover {
     background: orange;
+}
+
+.selected {
+    background: green;
 }
 
 img {
